# tiny-language

./: CMakeLists.txt  README.md  grammar.md  token.h  unique.h
ast/: Binop.h  affect.cpp  affect.h  ast.h  binop.cpp  binop.h  block.cpp  block.h  boollit.cpp  boollit.h  comparison.cpp  comparison.h  compoundexp.cpp  compoundexp.h  control.cpp  control.h  exp.cpp  exp.h  floatlit.cpp  floatlit.h  funcall.cpp  funcall.h  fundecl.cpp  fundecl.h  fundef.cpp  fundef.h  gen.ps1  highexp.cpp  highexp.h  intlit.cpp  intlit.h  lowexp.cpp  lowexp.h  neg.cpp  neg.h  paren.cpp  paren.h  program.cpp  program.h  prototype.cpp  (+17 more)
lexer/: lexer.h  main.cpp  test.tl  token.h  unique.h
parser/: context.cpp  context.h  exp.cpp  fundef.cpp  fundef.h  parser.h  statement.cpp  type.h
